gatewayapi-cilium/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: frontend
  namespace: guestbook
spec:
  gatewayClassName: cilium
  listeners:
  - protocol: HTTP
    port: 80
    name: frontend-gw
    allowedRoutes:
      namespaces:
        from: Same
