gatewayapi-cilium/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: frontend
  namespace: guestbook
spec:
  parentRefs:
  - name: frontend
  rules:
  - backendRefs:
    - name: frontend
      port: 80
